[metadata]
name = toolbox
author = Felipe Faria
author-email = felipefaria@hey.com
summary = Extends Python with useful features.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.7
home-page = https://github.com/synchronizing/toolbox
project_urls =
    Bug Tracker = https://github.com/synchronizing/toolbox/issues
    Documentation = https://synchronizing.github.io/toolbox/
    Source Code = https://github.com/synchronizing/toolbox/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    toolbox
    asyncio
    builtins
    collections
    config
    functools
    textwrap

[files]
packages =
    toolbox
